--- a/sitekinho/css/style.css
+++ b/sitekinho/css/style.css
@@ -35,21 +35,25 @@ ul{
     margin: 0 auto;
     margin: 20px 10%;
 }
-
-.Imgcategorias{
-    width: 400px;
-    height: 550px;
-    margin: 5px;
+footer{
+    width: 100%;
 }
 header img{
     width: 100%;
     height: 600px;
 }
+
+.Imgcategorias{
+    width: auto;
+    height: 550px;
+    margin: 5px;
+}
 .categoria{
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-footer{
-    width: 100%;}
 
 .produtos{
     display: flex;
@@ -62,4 +66,24 @@ footer{
     width: 300px;
     height: 350px;
     margin: 8px;
+}
+@media screen  and (max-width: 768px){
+    .Imgcategorias{
+        width: auto;
+        height: 300px;
+        margin: 2px;
+    }
+    .produtos img{
+        width: auto;
+        height: 300px;
+        margin: 8px;
+    }
+}
+@media screen  and (max-width: 320px){
+    .Imgcategorias{
+        width: auto;
+        height: 550px;
+        margin: 2px;
+    }
+    
 }
