--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ header img{
     width: auto;
     height: 450px;
     margin: 3px;
+
 }
 .categoria{
     align-items: center;
@@ -116,6 +117,26 @@ article img{
         height: 300px;
         margin: 8px;
     }
+
+
+}
+@media screen  and (max-width: 769px){
+    .Imgcategorias{
+        width: auto;
+        height: 230px;
+        margin: 2px;
+    }
+    .produtos img{
+        width: 250px;
+        height: 270px;
+        margin: 8px;
+    }
+    header img{
+        /* display: none; */
+        height: 300px;
+        width: 100%;
+    }
+
 }
 @media screen  and (max-width: 426px){
     nav{
@@ -142,4 +163,10 @@ article img{
     header img{
         display: none;
     }
+    .produtos img{
+        width: 90%;
+    }
 }
+/* @media screen and(min-width: 2560px) {
+    caso de problema em tela maior
+} */
