--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ article img{
         width: 90%;
     }
 }
-/* @media screen and(min-width: 2560px) {
-    caso de problema em tela maior
-} */
+@media screen and(min-width: 450px) {
+    .Imgcategorias{
+    width: auto;
+    height: 400px;
+    margin: 3px;
+    }
+}
