--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ article img{
 }
 @media screen and(min-width: 1206px) {
     .Imgcategorias{
-    width: auto;
+    width: 300px;
     height: 400px;
     margin: 3px;
     }
